deployment/aks/services/api-gateways/web-gw/web-gw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-gw-deployment
  labels:
    app: web-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-gw
  template:
    metadata:
      labels:
        app: web-gw
    spec:
      containers:
        - name: webgw
          image:  netcoremicroservicesacr.azurecr.io/webgw:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
