deployment/aks/services/api-gateways/web-gw/web-gw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-gw-service
spec:
  type: ClusterIP
  selector:
    app: web-gw
  ports:
    - protocol: TCP
      port: 80
